--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.utc.parquedero_utc" >
+    package="com.utc.parquedero_utc">
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Parquedero_UTC" >
-        <activity android:name=".formRegister" >
-        </activity>
-        <activity android:name=".MainActivity" >
+        android:theme="@style/Theme.Parquedero_UTC">
+        <activity android:name=".BienvenidaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".formRegister"></activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
