--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Parquedero_UTC">
+        <activity android:name=".MenuActivity"></activity>
         <activity android:name=".BienvenidaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,8 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".formRegister"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".formRegister" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
